Community panel added in 'pages#show'

--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -1,34 +1,55 @@
 <div class="container">
     <div class="row">
-        <div class=></div>
-      <div class="col-md-3 col-xs-3">
-      </div>
-      <div class="col-md-6 col-xs-6">
+      <div class="col-md-6">
         <div class="panel panel-personal">
           <div class="panel-heading">
             <div class="panel-title">
               <center><h3 class="negrita wfont sombra">Contacto</h3></center>
             </div>
           </div>
-            <div class="panel-body">
-              <div class="container-fluid">
-                  <ul class="list-group">
-                    <li class="list-group-item negrita">Ailán, Julián</li>
-                    <center style="padding-top:1em;padding-bottom:1em;">
-                      <div><a href="/" class="negrita" style="color: #3A5795">Facebook</a></div>                      
-                      <div><a href="/" class="negrita" style="color: #f26161">Google+</a></div>
-                      <div class="negrita">(mail de Juli acá)</div>
-                      <div class="italica">Resta configurar cuentas de Juli</div>
-                    </center>
-                    <li class="list-group-item negrita">Hourquebie, Lucas</li>
-                    <center style="padding-top:1em;padding-bottom:1em;">
-                      <div><a href="https://www.facebook.com/lucashour" class="negrita" style="color: #3A5795">Facebook</a></div>                      
-                      <div><a href="https://plus.google.com/+LucasHourquebie/posts" class="negrita" style="color: #f26161">Google+</a></div>
-                      <div class="negrita">lucashour1993@gmail.com</div>
-                    </center>
-                  </ul>
-                </div>
-            </div>          
+          <div class="panel-body">
+            <div class="container-fluid">
+                <ul class="list-group">
+                  <li class="list-group-item negrita">Ailán, Julián</li>
+                  <center style="padding-top:1em;padding-bottom:1em;">
+                    <div><a href="/" class="negrita" style="color: #3A5795">Facebook</a></div>                      
+                    <div><a href="/" class="negrita" style="color: #f26161">Google+</a></div>
+                    <div class="negrita">(mail de Juli acá)</div>
+                    <div class="italica">Resta configurar cuentas de Juli</div>
+                  </center>
+                  <li class="list-group-item negrita">Hourquebie, Lucas</li>
+                  <center style="padding-top:1em;padding-bottom:1em;">
+                    <div><a href="https://www.facebook.com/lucashour" class="negrita" style="color: #3A5795">Facebook</a></div>                      
+                    <div><a href="https://plus.google.com/+LucasHourquebie/posts" class="negrita" style="color: #f26161">Google+</a></div>
+                    <div class="negrita">lucashour1993@gmail.com</div>
+                  </center>
+                </ul>
+              </div>
+          </div>          
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="panel panel-personal">
+          <div class="panel-heading">
+            <div class="panel-title">
+              <center><h3 class="negrita wfont sombra">Comunidad</h3></center>
+            </div>
+          </div>
+          <div class="panel-body">
+            <div class="container-fluid">
+                <ul class="list-group">
+                  <li class="list-group-item negrita">Desarrolladores</li>
+                  <center style="padding-top:1em;padding-bottom:1em;">
+                    <p>¿Tenés experiencia en desarrollo web? ¿Estás familiarizado con HTML, CSS  y Ruby on Rails? Adjuntamos el enlace al repositorio público en GitHub del código fuente, para que cualquier miembro de la comunidad realice los cambios que crea convenientes para mejorar el sitio.</p>
+                    <p><a href="https://github.com/tulians/degree_info_website" class="destacado">Repositorio en GitHub</a></p>
+                  </center>
+                  <li class="list-group-item negrita">Sugerencias</li>
+                  <center style="padding-top:1em;padding-bottom:1em;">
+                    <p>¿Tenés alguna idea o sugerencia? ¿Crees que el sitio necesita cambios? Cualquier opinión es importante para nosotros, no dudes en escribirnos y comentar todo aquello que pienses que pueda aportar.</p>
+                  </center>
+                </ul>
+              </div>
+          </div>          
         </div>
       </div>
     </div>
