XS modification in pages' show

--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -40,7 +40,7 @@
                   <li class="list-group-item negrita">Desarrolladores</li>
                   <center style="padding-top:1em;padding-bottom:1em;">
                     <p>¿Tenés experiencia en desarrollo web? ¿Estás familiarizado con HTML, CSS  y Ruby on Rails? Adjuntamos el enlace al repositorio público en GitHub del código fuente, para que cualquier miembro de la comunidad realice los cambios que crea convenientes para mejorar el sitio.</p>
-                    <p><a href="https://github.com/tulians/degree_info_website" class="destacado">Repositorio en GitHub</a></p>
+                    <p><a href="https://github.com/tulians/degree_info_website" class="destacado" target="_blank">Repositorio en GitHub</a></p>
                   </center>
                   <li class="list-group-item negrita">Sugerencias</li>
                   <center style="padding-top:1em;padding-bottom:1em;">
