--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,2 +1,79 @@
-<h1>Pages#index</h1>
-<p>Find me in app/views/pages/index.html.erb</p>
+<div class="container">
+    <div class="row">
+      <div class="col-md-6">
+        <div class="panel panel-personal">
+          <div class="panel-heading">
+            <div class="panel-title">
+              <center><h3 class="negrita wfont sombra">Fechas importantes</h3></center>
+            </div>
+          </div>
+          <div class="panel-body">
+              <div class="container-fluid">
+                  <ul class="list-group">
+                    <li class="list-group-item negrita">Calendario académico</li>
+                    <center style="padding-top:1em;padding-bottom:1em;">
+                      <div>Calendario académico del ciclo lectivo 2015</div>
+                      <div><a href="http://163.10.22.53/ingenieria/sitio/archivos/IC_CALENDARIO_ACADEMICO_2015.pdf" class="destacado"target="_blank">Enlace</a></div>
+                    </center>
+	                  <li class="list-group-item negrita">Inscripciones</li>
+	                  <center style="padding-top:1em;padding-bottom:1em;">
+	                    <p class="negrita">Primer semestre 2015:</p>
+                      <p>25/02/2015 - 14/03/2015 (promoción)</p>
+                      <p>15/03/2015 - 31/03/2015 (cursada)</p>
+                      <p class="negrita">Segundo semestre 2015:</p>
+                      <p>03/08/2015 - 16/03/2015 (promoción)</p>
+                      <p>17/08/2015 - 31/08/2015 (cursada)</p>
+	                  </center>
+                    <li class="list-group-item negrita">Inicio de cursada</li>
+                    <center>
+                      <p class="negrita">Primer semestre 2015</p>
+                      <p>02/03/2015</p>
+                      <p class="negrita">Segundo semestre 2015</p>
+                      <p>10/08/2015</p>
+                    </center>
+                  </ul>
+                </div>
+            </div>          
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="panel panel-personal">
+          <div class="panel-heading">
+            <div class="panel-title">
+              <center><h3 class="negrita wfont sombra">Ingresantes</h3></center>
+            </div>
+          </div>
+          <div class="panel-body">
+            <div class="container-fluid">
+                <ul class="list-group">
+                  <li class="list-group-item negrita">Introducción a la Informática</li>
+                  <div class="destacado" style="padding-top:1em;padding-bottom:1em;">
+                    <div><a href="http://blogs.unlp.edu.ar/ingreso/files/2014/12/GuiaIAI.pdf" target="_blank">Material del Módulo Introducción a la Informática</a></div>
+                    <div><a href="http://blogs.unlp.edu.ar/ingreso/files/2014/12/INGENIERIA-LISTADO-COMPLETO.pdf" target="_blank">Listado de alumnos con su comisión – Información del inicio del curso</a></div>
+                    <div><a href="http://blogs.unlp.edu.ar/ingreso/files/2015/01/Notas-19-1-2015.pdf" target="_blank">Notas del examen voluntario del 19-1-2015</a></div>
+                    <div><a href="http://blogs.unlp.edu.ar/ingreso/files/2015/02/Fechas-de-los-ex%C3%A1menes-de-Introducci%C3%B3n-a-la-Inform%C3%A1tica.pdf" target="_blank">Fechas de los exámenes de Introducción a la Informática</a></div>
+                  </div>
+                </ul>
+              </div>
+          </div> 
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="panel panel-personal">
+          <div class="panel-heading">
+            <div class="panel-title">
+              <center><h3 class="negrita wfont sombra">Horarios</h3></center>
+            </div>
+          </div>
+          <div class="panel-body">
+            <div class="container-fluid">
+                <ul class="list-group">
+                  <li class="list-group-item negrita">Primer semestre 2015</li>
+                  <center class="italica" style="padding-top:1em;padding-bottom:1em;">Próximamente...</center>
+                </ul>
+              </div>
+          </div> 
+        </div>
+      </div>
+    </div>
+</div>
