--- a/app/views/subjects/index.html.erb
+++ b/app/views/subjects/index.html.erb
@@ -169,6 +169,7 @@
             </div>
           </div>
         </div>
+      <center style="padding-bottom:1em"><%= link_to 'Agregar Materia', new_subject_path , class:"btn btn-primary" %></center>
       </div>
       </div>
     </div>
