--- a/app/views/subjects/new.html.erb
+++ b/app/views/subjects/new.html.erb
@@ -81,13 +81,13 @@
 					<center>
 					<div class="row">
 					  <div class="col-xs-1 col-md-1"></div>
-					  <div class="col-xs-10 col-md-10"><%= f.submit "Publicar", class:"btn btn-primary btn-sm" %></div>
+					  <div class="col-xs-10 col-md-10"><%= f.submit "Publicar", class:"btn btn-primary" %></div>
 					</div>
 					</center>
 					<hr>
 					<div class="row" style="padding-top:1em">
 					  <div class="col-xs-1 col-md-1"></div>
-					  <div class="col-xs-10 col-md-10"><%= link_to 'Volver al listado de materias', subjects_path, class:"btn btn-primary btn-sm" %></div>
+					  <div class="col-xs-10 col-md-10"><%= link_to 'Volver al listado de materias', subjects_path, class:"btn btn-primary" %></div>
 					</div>
 			<!--
 
