--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -14,7 +14,7 @@
                 <h3 class="destacado" style="padding-bottom:0.5em">Sitios de interés</h3>
                 <ul class="list-group negrita" style="list-style-type:none">
     		          <li class="list-group-item"><a href="https://www.guarani-infoinge.unlp.edu.ar" target="_blank">SIU Guaraní</a></li>
-                  <li class="list-group-item"><a href="http://163.10.22.53/ingenieria/sitio/planEstudio_2011.html" target="_blank">Facultad Virtual Informática-Ingeniería</a></li>
+                  <li class="list-group-item"><a href="http://163.10.22.53/ingenieria/sitio/" target="_blank">Facultad Virtual Informática-Ingeniería</a></li>
                   <li class="list-group-item"><a href="http://www.ing.unlp.edu.ar" target="_blank">Facultad de Ingeniería - Sitio oficial</a></li>
                   <li class="list-group-item"><a href="http://www.info.unlp.edu.ar" target="_blank">Facultad de Informática - Sitio oficial</a></li>
                   <li class="list-group-item"><a href="https://webunlp.ead.unlp.edu.ar/index.php" target="_blank">WebUNLP</a></li>
