Minimal changes in a few views

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -25,7 +25,7 @@
                       <p>17/08/2015 - 31/08/2015 (cursada)</p>
 	                  </center>
                     <li class="list-group-item negrita">Inicio de cursada</li>
-                    <center>
+                    <center style="padding-top:1em;padding-bottom:1em;">
                       <p class="negrita">Primer semestre 2015</p>
                       <p>02/03/2015</p>
                       <p class="negrita">Segundo semestre 2015</p>
