--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,7 +31,7 @@
 	        <% if user_signed_in? %>
 	          <strong><%= current_user.email %></strong>.
 	          <%= link_to 'Editar perfil', edit_user_registration_path, :class => 'navbar-link' %> |
-	          <%= link_to "Cerrar Sesión", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
+	          <%= link_to "Cerrar sesión", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
 	        <% else %>
 	          <%= link_to "Registrarse", new_user_registration_path, :class => 'navbar-link'  %> |
 	          <%= link_to "Ingresar", new_user_session_path, :class => 'navbar-link'  %>
