--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
 	        <li><a href="/pages/info"  class="hvr-wobble-horizontal">Contacto</a></li>
 	        <p class="navbar-text pull-right">
 	        <% if user_signed_in? %>
-	          <strong><%= current_user.email %></strong>.
+	          <strong><%= current_user.email %></strong>
 	          <%= link_to 'Editar perfil', edit_user_registration_path, :class => 'navbar-link' %> |
 	          <%= link_to "Cerrar sesión", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
 	        <% else %>
