--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,7 +3,7 @@
         <div class=></div>
     	<div class="col-md-6">
             <div class="well">
-    		  <h3 class="destacado" style="padding-bottom:0.5em">Bienvenid@s</h3>
+    		  <h3 class="destacado" style="padding-bottom:0.5em;text-align:center;">Bienvenid@s</h3>
               <p>El objetivo de este sitio es poder compartir información de la carrera, tal como apuntes, parciales de años anteriores o fechas de comienzo de cursada, entre otras cosas. </p>
               <p>Los apuntes y examenes estarán almacenados en carpetas de Google Drive, de las cuales podrás descargar archivos o subir cualquier información que consideres pertinente compartir acerca de cualquiera de las materias.</p>
               <p>Además también estarán disponibles los links a las páginas de cada cátedra. En el caso de que no estén, y si vos lo conocés, por favor reportalo y enviá el link en dicho reporte.</p>
@@ -11,7 +11,7 @@
     	</div>
     	<div class="col-md-6">
             <div class="well">
-                <h3 class="destacado" style="padding-bottom:0.5em">Sitios de interés</h3>
+                <h3 class="destacado" style="padding-bottom:0.5em;text-align:center;">Sitios de interés</h3>
                 <ul class="list-group negrita" style="list-style-type:none">
     		          <li class="list-group-item"><a href="https://www.guarani-infoinge.unlp.edu.ar" target="_blank">SIU Guaraní</a></li>
                   <li class="list-group-item"><a href="http://163.10.22.53/ingenieria/sitio/" target="_blank">Facultad Virtual Informática-Ingeniería</a></li>
@@ -22,4 +22,7 @@
             </div>
     	</div>
     </div>
+    <center style="padding-top: 2em">
+      <%= image_tag("logo-ingenieria.png", size:"140x140") %>
+    </center>
 </div>
