--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
         <div class=></div>
-    	<div class="col-md-6">
+    	<div class="col-xs-12 col-md-6">
             <div class="well">
     		  <h3 class="destacado" style="padding-bottom:0.5em;text-align:center;">Bienvenid@s</h3>
               <p>El objetivo de este sitio es poder compartir información de la carrera, tal como apuntes, parciales de años anteriores o fechas de comienzo de cursada, entre otras cosas. </p>
@@ -9,7 +9,7 @@
               <p>Además también estarán disponibles los links a las páginas de cada cátedra. En el caso de que no estén, y si vos lo conocés, por favor reportalo y enviá el link en dicho reporte.</p>
             </div>
     	</div>
-    	<div class="col-md-6">
+    	<div class="col-xs-12 col-md-6">
             <div class="well">
                 <h3 class="destacado" style="padding-bottom:0.5em;text-align:center;">Sitios de interés</h3>
                 <ul class="list-group negrita" style="list-style-type:none">
