--- a/app/views/subjects/edit.html.erb
+++ b/app/views/subjects/edit.html.erb
@@ -1,9 +1,9 @@
 <div class="container">
     <div class="row" style="padding-top:0.5em">
         <div class=></div>
-      <div class="col-md-1 col-xs-1">
+      <div class="col-md-1">
       </div>
-      <div class="col-md-10 col-xs-10">
+      <div class="col-md-10 col-xs-12">
       <div class="panel panel-personal">
         <div class="panel-heading">
           <div class="panel-title">
@@ -15,76 +15,76 @@
 			<div class="container-fluid">
 				<%= form_for(@subject) do |f| %>
 					<div class="row"style="padding-top:0.5em">
-					  <div class="col-xs-1 col-md-1"></div>
-					  <div class="col-xs-10 col-md-10"><%= f.label "Nombre" %></div>
+					  <div class="col-md-1"></div>
+					  <div class="col-xs-12 col-md-10"><%= f.label "Nombre" %></div>
 					</div>
 					<div class="row" style="padding-top:0.5em">
-					  <div class="col-xs-1 col-md-1"></div>
-					  <div class="col-xs-10 col-md-10"><%= f.text_field :name, autofocus: true, class:"form-control" %></div>
+					  <div class="col-md-1"></div>
+					  <div class="col-xs-12 col-md-10"><%= f.text_field :name, autofocus: true, class:"form-control" %></div>
 					</div>
 					<div class="row" style="padding-top:0.5em">
-					  <div class="col-xs-1 col-md-1"></div>
-					  <div class="col-xs-10 col-md-10"><%= f.label "Descripción" %></div>
+					  <div class="col-md-1"></div>
+					  <div class="col-xs-12 col-md-10"><%= f.label "Descripción" %></div>
 					</div>
 					<div class="row" style="padding-top:0.5em">
-					  <div class="col-xs-1 col-md-1"></div>
-					  <div class="col-xs-10 col-md-10"><%= f.text_area :description, class:"form-control", maxlength:"5000" %></div>
+					  <div class="col-md-1"></div>
+					  <div class="col-xs-12 col-md-10"><%= f.text_area :description, class:"form-control", maxlength:"5000" %></div>
 					</div>
 					<div class="row" style="padding-top:0.5em">
-					  <div class="col-xs-1 col-md-1"></div>
-					  <div class="col-xs-10 col-md-10"><%= f.label "Código" %></div>
+					  <div class="col-md-1"></div>
+					  <div class="col-xs-12 col-md-10"><%= f.label "Código" %></div>
 					</div>
 					<div class="row" style="padding-top:0.5em">
-					  <div class="col-xs-1 col-md-1"></div>
-					  <div class="col-xs-10 col-md-10"><%= f.text_field :code, autocomplete: "off", class:"form-control" %></div>
+					  <div class="col-md-1"></div>
+					  <div class="col-xs-12 col-md-10"><%= f.text_field :code, autocomplete: "off", class:"form-control" %></div>
 					</div>
 					<div class="row" style="padding-top:0.5em">
-					  <div class="col-xs-1 col-md-1"></div>
-					  <div class="col-xs-10 col-md-10"><%= f.label "Año" %></div>
+					  <div class="col-md-1"></div>
+					  <div class="col-xs-12 col-md-10"><%= f.label "Año" %></div>
 					</div>
 					<div class="row" style="padding-top:0.5em">
-						<div class="col-xs-1 col-md-1"></div>
-						<div class="col-xs-10 col-md-10"><%= f.text_field :year, autocomplete: "off", class:"form-control" %></div>
+						<div class="col-md-1"></div>
+						<div class="col-xs-12 col-md-10"><%= f.text_field :year, autocomplete: "off", class:"form-control" %></div>
 					</div>
 					<div class="row" style="padding-top:0.5em">
-					  <div class="col-xs-1 col-md-1"></div>
-					  <div class="col-xs-10 col-md-10"><%= f.label "Orden" %></div>
+					  <div class="col-md-1"></div>
+					  <div class="col-xs-12 col-md-10"><%= f.label "Orden" %></div>
 					</div>
 					<div class="row" style="padding-top:0.5em">
-					  <div class="col-xs-1 col-md-1"></div>
-					  <div class="col-xs-10 col-md-10"><%= f.text_field :int_ord, autocomplete: "off", class:"form-control" %></div>
+					  <div class="col-md-1"></div>
+					  <div class="col-xs-12 col-md-10"><%= f.text_field :int_ord, autocomplete: "off", class:"form-control" %></div>
 					</div>
 					<div class="row" style="padding-top:0.5em">
-					  <div class="col-xs-1 col-md-1"></div>
-					  <div class="col-xs-10 col-md-10"><%= f.label "Sitio Web" %></div>
+					  <div class="col-md-1"></div>
+					  <div class="col-xs-12 col-md-10"><%= f.label "Sitio Web" %></div>
 					</div>
 					<div class="row" style="padding-top:0.5em">
-					  <div class="col-xs-1 col-md-1"></div>
-					  <div class="col-xs-10 col-md-10"><%= f.text_field :website, autocomplete: "off", class:"form-control" %></div>
+					  <div class="col-md-1"></div>
+					  <div class="col-xs-12 col-md-10"><%= f.text_field :website, autocomplete: "off", class:"form-control" %></div>
 					</div>
 					<div class="row" style="padding-top:0.5em">
-					  <div class="col-xs-1 col-md-1"></div>
-					  <div class="col-xs-10 col-md-10"><%= f.label "Carpeta de DRIVE" %></div>
+					  <div class="col-md-1"></div>
+					  <div class="col-xs-12 col-md-10"><%= f.label "Carpeta de DRIVE" %></div>
 					</div>
 					<div class="row" style="padding-top:0.5em">
-					  <div class="col-xs-1 col-md-1"></div>
-					  <div class="col-xs-10 col-md-10"><%= f.text_field :notes, autocomplete: "off", class:"form-control" %></div>
+					  <div class="col-md-1"></div>
+					  <div class="col-xs-12 col-md-10"><%= f.text_field :notes, autocomplete: "off", class:"form-control" %></div>
 					</div>
 					<div class="row" style="padding-top:0.5em">
-					  <div class="col-xs-1 col-md-1"></div>
-					  <div class="col-xs-10 col-md-10"><%= f.label "Imagen representativa" %></div>
+					  <div class="col-md-1"></div>
+					  <div class="col-xs-12 col-md-10"><%= f.label "Imagen representativa" %></div>
 					</div>
 					<div class="row" style="padding-top:0.5em">
-					  <div class="col-xs-1 col-md-1"></div>
-					  <div class="col-xs-10 col-md-10"><%= f.file_field :picture, class:"form-control" %></div>
+					  <div class="col-md-1"></div>
+					  <div class="col-xs-12 col-md-10"><%= f.file_field :picture, class:"form-control" %></div>
 					</div>
 					<div class="row" style="padding-top:0.5em" style="padding-top:0.5em">
-					  <div class="col-xs-1 col-md-1"></div>
-					  <div class="col-xs-10 col-md-10"><%= f.submit "Actualizar", class:"btn btn-primary btn-sm" %></div>
+					  <div class="col-md-1"></div>
+					  <div class="col-xs-12 col-md-10"><%= f.submit "Actualizar", class:"btn btn-primary btn-sm" %></div>
 					</div>
 					<div class="row" style="padding-top:0.5em" style="padding-top:0.5em">
-					  <div class="col-xs-1 col-md-1"></div>
-					  <div class="col-xs-10 col-md-10"><%= link_to 'Volver al listado de materias', subjects_path, class:"btn btn-primary btn-sm" %></div>
+					  <div class="col-md-1"></div>
+					  <div class="col-xs-12 col-md-10"><%= link_to 'Volver al listado de materias', subjects_path, class:"btn btn-primary btn-sm" %></div>
 					</div>
 			<!--
 						<div class="form-group">Nombre de la materia</div><div><%= f.text_field :name %></div>
