--- a/app/views/subjects/index.html.erb
+++ b/app/views/subjects/index.html.erb
@@ -1,9 +1,9 @@
 <div class="container">
     <div class="row">
         <div class=></div>
-      <div class="col-md-1 col-xs-1">
+      <div class="col-md-1">
       </div>
-      <div class="col-md-10 col-xs-10">
+      <div class="col-md-10 col-xs-12">
       <div class="panel panel-personal">
         <div class="panel-heading">
           <div class="panel-title">
