--- a/app/views/subjects/show.html.erb
+++ b/app/views/subjects/show.html.erb
@@ -3,7 +3,7 @@
 <div class="container">
     <div class="row">
       <div class="col-md-2"></div>
-      <div class="col-md-8">
+      <div class="col-xs-12 col-md-8">
         <div class="panel panel-personal">
           <div class="panel-heading">
             <center><h3 class="panel-title blanca negrita sombra"><%= @subject.name %> | Código: <%= @subject.code %></h3></center>
