--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-xs-12 col-md-6">
         <div class="panel panel-personal">
           <div class="panel-heading">
             <div class="panel-title">
@@ -27,7 +27,7 @@
             </div>          
         </div>
       </div>
-      <div class="col-md-6">
+      <div class="col-xs-12 col-md-6">
         <div class="panel panel-personal">
           <div class="panel-heading">
             <div class="panel-title">
