--- a/app/views/subjects/index.html.erb
+++ b/app/views/subjects/index.html.erb
@@ -169,7 +169,9 @@
             </div>
           </div>
         </div>
-      <center style="padding-bottom:1em"><%= link_to 'Agregar Materia', new_subject_path , class:"btn btn-primary" %></center>
+        <% if ADMINS.include?(current_user.email)%>
+          <center style="padding-bottom:1em"><%= link_to 'Agregar Materia', new_subject_path , class:"btn btn-primary" %></center>
+        <% end %>
       </div>
       </div>
     </div>
