--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-	  <title>DegreeInfoWebsite</title>
+	  <title>IngCompUNLP - Sitio del estudiante universitario</title>
 	  <link rel="stylesheet" href="//railsgirls.com/assets/bootstrap.css">
 	  <link rel="stylesheet" href="//railsgirls.com/assets/bootstrap-theme.css">
 	  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
@@ -20,7 +20,7 @@
 		        <span class="icon-bar"></span>
 		        <span class="icon-bar"></span>
 		      </button>
-		      <a class="navbar-brand hvr-bounce-in negrita" href="/">Ingeniería en Computación - UNLP</a>
+		      <a class="navbar-brand hvr-bounce-in" href="/">Ingeniería en Computación <span class="negrita">UNLP</span></a>
 		    </div>
 		    <div class="collapse navbar-collapse">
 		      <ul class="nav navbar-nav">
