Minor change in footer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -55,7 +55,7 @@
 			<% end %>
 		<footer>
 			<center>
-				<span class="negrita">Julián Ailán 2015</span>
+				<span class="negrita"><span class="destacado">Julián Ailán</span> | <span class="destacado">Lucas Hourquebie</span> | 2015</span>
 			</center>
 		</footer>
 
