Answers system configured and minor visual changes in buttons

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -47,7 +47,7 @@
                   </div>
                   <div class="row" style="padding-top:1em">
                     <div class="col-md-1"></div>
-                    <div class="col-xs-12 col-md-8 form-group"><%= f.submit "Actualizar", class:"btn btn-primary btn-sm" %></div>
+                    <div class="col-xs-12 col-md-8 form-group"><%= f.submit "Actualizar", class:"btn btn-primary" %></div>
                   </div>
                 <% end %>
               <!--
