--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -58,7 +58,7 @@
                   <center>
                     <div class="row" style="padding-top:1em">
                       <div class="col-md-1"></div>
-                      <div class="col-xs-12 col-md-10 form-group"><%= f.submit "Registrarse", class:"btn btn-primary btn-sm" %></div>
+                      <div class="col-xs-12 col-md-10 form-group"><%= f.submit "Registrarse", class:"btn btn-primary" %></div>
                     </div>
                   </center>
                   <div class="row">
