--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -51,8 +51,10 @@
                     <div><a href="http://blogs.unlp.edu.ar/ingreso/files/2014/12/GuiaIAI.pdf" target="_blank">Material del Módulo Introducción a la Informática</a></div>
                     <div><a href="http://www.ing.unlp.edu.ar/ingreso/contenidos/curso_nivelacion.pdf" target="_blank">Material del Curso de Nivelación de Matemática</a></div>
                     <div><a href="http://blogs.unlp.edu.ar/ingreso/files/2014/12/INGENIERIA-LISTADO-COMPLETO.pdf" target="_blank">Listado de alumnos con su comisión – Información del inicio del curso</a></div>
-                    <div><a href="http://blogs.unlp.edu.ar/ingreso/files/2015/01/Notas-19-1-2015.pdf" target="_blank">Notas del examen voluntario del 19-1-2015</a></div>
+                    <div><a href="http://blogs.unlp.edu.ar/ingreso/files/2015/01/Notas-19-1-2015.pdf" target="_blank">Notas del examen voluntario del 19-01-2015</a></div>
                     <div><a href="http://blogs.unlp.edu.ar/ingreso/files/2015/02/Fechas-de-los-ex%C3%A1menes-de-Introducci%C3%B3n-a-la-Inform%C3%A1tica.pdf" target="_blank">Fechas de los exámenes de Introducción a la Informática</a></div>
+                    <div><a href="http://ic.info.unlp.edu.ar/ingenieria/sitio/archivos/ResultadosIAI-P2-23-2-2015.pdf" target="_blank">Notas del examen "Introducción a la Informática" del 23-02-2015</a></div>
+                    <div><a href="http://ic.info.unlp.edu.ar/ingenieria/sitio/archivos/Resultados_IAI_P3.pdf" target="_blank">Notas del examen "Introducción a la Informática" del 25-02-2015</a></div>
                   </div>
                 </ul>
               </div>
