Empty commit for merging

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -23,11 +23,11 @@
                   <% end %>
                   <div class="row">
                     <div class="col-md-1"></div>
-                    <div class="col-xs-12 col-md-8"><%= f.label "Contraseña" %> <i>(dejar en blanco si no la vas a cambiar)</i></div>
+                    <div class="col-xs-12 col-md-8"><%= f.label "Contraseña nueva" %> <!-- <i>(dejar en blanco si no la vas a cambiar)</i>--> </div> 
                   </div>
                   <div class="row">
                     <div class="col-md-1"></div>
-                    <div class="col-xs-12 col-md-8"><%= f.password_field :password,autofocus: true, autocomplete: "off", class:"form-control", :required => "required" %></div>
+                    <div class="col-xs-12 col-md-8"><%= f.password_field :password, autofocus: true, autocomplete: "off", class:"form-control", :required => "required" %></div>
                   </div>
                   <div class="row">
                     <div class="col-md-1"></div>
