--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -24,5 +24,6 @@
     </div>
     <center style="padding-top: 2em">
       <%= image_tag("logo-ingenieria.png", size:"140x140") %>
+      <%= image_tag("logo-info.png", size:"140x140") %>
     </center>
 </div>
