--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,5 +1,9 @@
-<p>Welcome <%= @email %>!</p>
-
-<p>You can confirm your account email through the link below:</p>
-
-<p><%= link_to 'Confirm my account', confirmation_url(@resource, confirmation_token: @token) %></p>
+<p>Bienvenido, <b><%= @email %></b>!</p>
+<br>
+<p>Creaste de forma exitosa una cuenta en IngCompUNLP, la comunidad estudiantil de la carrera de Ingeniería en Computación de la Universidad Nacional de La Plata. Para continuar con su acceso, deberá confirmar su cuenta haciendo click en el siguiente enlace:</p>
+<br>
+<center><p><b><%= link_to 'Confirmar cuenta', confirmation_url(@resource, confirmation_token: @token) %></b></p></center>
+<br>
+<p>Saludos,</p>
+<br>
+<center><p><b>Equipo de administradores de IngCompUNLP</b></p></center>
