--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,7 +31,7 @@
 		        <p class="navbar-text pull-right">
 		        <% if user_signed_in? %>
 		          <strong><%= current_user.email %></strong>
-		          <%= link_to 'Editar perfil', edit_user_registration_path, :class => 'navbar-link' %> |
+		          <%= link_to 'Editar perfil', edit_user_registration_path,:class => 'navbar-link' %> |
 		          <%= link_to "Cerrar sesión", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
 		        <% else %>
 		          <%= link_to "Registrarse", new_user_registration_path, :class => 'navbar-link'  %> |
@@ -43,6 +43,20 @@
 		</nav>
 
 			<div id="cuerpo">
+				<% if user_signed_in?%>
+					<% if not current_user.confirmed_at%>
+						<div class="container">
+							<div class="row">
+								<div class="col-md-3"></div>
+								<div class="col-xs-12 col-md-6">
+									<div class="well">
+										<div class="error" style="text-align: center">¡Cuenta no confirmada! Ingrese a su casilla de correo electrónico y confirme su email. De lo contrario, su cuenta se bloqueará.</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					<% end %>
+				<% end %>
 				<div class="container">
 					<%= render partial: "layouts/flash_messages", locals: {flash: flash} %>
 				</div>
